v0 of adding a "hold a few seconds" audio to answered calls

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,21 @@
     <string name="accept_call">Accept call</string>
     <string name="decline">Decline</string>
     <string name="decline_call">Decline call</string>
+    <string name="play_notification">Play notification</string>
+    <string name="play_notification_and_accept">Play notification and accept call</string>
+    <string name="record_hold_notification">Record hold notification</string>
+    <string name="record_hold_notification_summary">Record a message to play when using the play notification button</string>
+    <string name="start_recording">Start recording</string>
+    <string name="stop_recording">Stop recording</string>
+    <string name="recording_saved">Recording saved successfully</string>
+    <string name="recording_failed">Recording failed</string>
+    <string name="delete_recording">Delete recording</string>
+    <string name="recording_exists">Recording exists</string>
+    <string name="no_recording">No recording found</string>
+    <string name="recording_in_progress">Recording in progress...</string>
+    <string name="no_audio_permissions">Audio recording permission is required</string>
+    <string name="play">Play</string>
+    <string name="file_deleted">File deleted</string>
     <string name="unknown_caller">Unknown Caller</string>
     <string name="is_calling">Is Calling…</string>
     <string name="dialing">Dialing…</string>
